src/test/Circularity3/Circularity3.expected
error: Circularity3.panda:1:1: class A is its own superclass
1 error
