src/test/Circularity3/Circularity3.panda
interface A : D {
}

interface B {
}

interface C : A, B {
}

interface D : C {
}